--- a/LPLinkPresenter/LPLinkPresenter/Base.lproj/Main.storyboard
+++ b/LPLinkPresenter/LPLinkPresenter/Base.lproj/Main.storyboard
@@ -15,54 +15,34 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="OzN-7V-VE0">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="OzN-7V-VE0">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="112" id="Xdq-lh-ZNV" customClass="RichTableViewCell" customModule="LPLinkPresenter" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="112"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="Xdq-lh-ZNV" customClass="RichTableViewCell" customModule="LPLinkPresenter" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="316"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Xdq-lh-ZNV" id="8Ua-qC-7zc">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="112"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="316"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TITLE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6jU-65-aWR">
-                                                    <rect key="frame" x="132" y="16" width="266" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lHq-pV-Sk9">
-                                                    <rect key="frame" x="16" y="16" width="100" height="80"/>
-                                                    <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <view clipsSubviews="YES" contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="Zfc-ry-Oxt">
+                                                    <rect key="frame" x="8" y="8" width="398" height="300"/>
+                                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="100" id="MGS-Q5-hHc"/>
+                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="300" id="ums-aO-MKT"/>
                                                     </constraints>
-                                                </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DESCRIPTION" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LkB-4p-lGX">
-                                                    <rect key="frame" x="132" y="75" width="266" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
+                                                </view>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="6jU-65-aWR" firstAttribute="top" secondItem="8Ua-qC-7zc" secondAttribute="top" constant="16" id="4a3-82-ZBT"/>
-                                                <constraint firstAttribute="bottom" secondItem="lHq-pV-Sk9" secondAttribute="bottom" constant="16" id="CwS-Mt-OcY"/>
-                                                <constraint firstItem="6jU-65-aWR" firstAttribute="leading" secondItem="lHq-pV-Sk9" secondAttribute="trailing" constant="16" id="MXl-xW-V6M"/>
-                                                <constraint firstItem="lHq-pV-Sk9" firstAttribute="leading" secondItem="8Ua-qC-7zc" secondAttribute="leading" constant="16" id="TYZ-fs-ez3"/>
-                                                <constraint firstItem="lHq-pV-Sk9" firstAttribute="top" secondItem="8Ua-qC-7zc" secondAttribute="top" constant="16" id="VqS-iE-tgY"/>
-                                                <constraint firstItem="LkB-4p-lGX" firstAttribute="leading" secondItem="lHq-pV-Sk9" secondAttribute="trailing" constant="16" id="bkp-a5-qSi"/>
-                                                <constraint firstItem="LkB-4p-lGX" firstAttribute="top" relation="greaterThanOrEqual" secondItem="6jU-65-aWR" secondAttribute="bottom" constant="16" id="lzE-oD-P3j"/>
-                                                <constraint firstAttribute="bottom" secondItem="LkB-4p-lGX" secondAttribute="bottom" constant="16" id="onH-37-fQX"/>
-                                                <constraint firstAttribute="trailing" secondItem="LkB-4p-lGX" secondAttribute="trailing" constant="16" id="uEn-3h-rDn"/>
-                                                <constraint firstAttribute="trailing" secondItem="6jU-65-aWR" secondAttribute="trailing" constant="16" id="x0z-vQ-eaP"/>
+                                                <constraint firstAttribute="bottom" secondItem="Zfc-ry-Oxt" secondAttribute="bottom" constant="8" id="7Td-u9-ATT"/>
+                                                <constraint firstItem="Zfc-ry-Oxt" firstAttribute="top" secondItem="8Ua-qC-7zc" secondAttribute="top" constant="8" id="8DQ-iy-gaV"/>
+                                                <constraint firstAttribute="trailing" secondItem="Zfc-ry-Oxt" secondAttribute="trailing" constant="8" id="8bo-xy-ZTy"/>
+                                                <constraint firstItem="Zfc-ry-Oxt" firstAttribute="leading" secondItem="8Ua-qC-7zc" secondAttribute="leading" constant="8" id="uwN-X0-i7h"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="RichImageView" destination="lHq-pV-Sk9" id="bi1-m2-fAB"/>
-                                            <outlet property="descriptionLabel" destination="LkB-4p-lGX" id="L6F-IH-l2S"/>
-                                            <outlet property="titleLabel" destination="6jU-65-aWR" id="ZSm-NE-XME"/>
+                                            <outlet property="richView" destination="Zfc-ry-Oxt" id="DLi-uZ-vU2"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
